tests/baselines/reference/numericIndexerConstraint5.errors.txt
tests/cases/compiler/numericIndexerConstraint5.ts(2,5): error TS2322: Type '{ 0: Date; name: string; }' is not assignable to type '{ [name: number]: string; }'.
  Missing [string] or [number] index signature in type '{ 0: Date; name: string; }'.


==== tests/cases/compiler/numericIndexerConstraint5.ts (1 errors) ====
    var x = { name: "x", 0: new Date() };
    var z: { [name: number]: string } = x;
        ~
!!! error TS2322: Type '{ 0: Date; name: string; }' is not assignable to type '{ [name: number]: string; }'.
!!! error TS2322:   Missing [string] or [number] index signature in type '{ 0: Date; name: string; }'.